Assorted line spacing fixes

--- a/app/assets/stylesheets/_shared.css.sass
+++ b/app/assets/stylesheets/_shared.css.sass
@@ -16,8 +16,7 @@ $devgarden-highlight: #3d36de
 
 @mixin sans
   font-family: 'effra'
-  line-height: 100%
-  padding: 0.1em 0
+  line-height: 110%
 
 @mixin title-font
   @include sans
