--- a/app/assets/stylesheets/base.css.sass
+++ b/app/assets/stylesheets/base.css.sass
@@ -9,6 +9,7 @@ body
   color: $devgarden-dark
   @include body-font
   font-size: 1.1em
+  line-height: 120%
 
 main
   margin: 0 auto
@@ -136,7 +137,9 @@ hr
         content: '☠'
 
 .site
-  @include title-font
+  @include meta-font
+  font-weight: 400
+  margin-top: 0.2em
   .inline-icon
     display: none
 
@@ -158,7 +161,7 @@ hr
 .tags
   overflow: hidden
   white-space: nowrap
-  margin: 1em 0
+  margin: 0.8em 0
   @include meta-tiny-font
   .tag-category
     display: inline
