--- a/app/assets/stylesheets/projects.css.sass
+++ b/app/assets/stylesheets/projects.css.sass
@@ -9,8 +9,7 @@
       display: table-cell
 
   .icon
-    float: left
-    margin-right: 1.2em
+    padding-right: 1.2em
     @include feature-icon
 
   h1
